# symphony

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
android_log/: Cargo.toml  build.rs
android_log/resources/: bindgen.rs  wrapper.h
android_log/src/: lib.rs
bshook/: Cargo.toml
bshook/src/: config.rs  error.rs  il2cpp.rs  inline_hook.rs  log.rs
bshook_derive/: Cargo.toml
bshook_derive/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
example_mod/: Cargo.toml
example_mod/src/: lib.rs
examples/config/: Cargo.toml
examples/config/src/: lib.rs
examples/offsetless_hook/: Cargo.toml
examples/offsetless_hook/src/: lib.rs
il2cpp/: Cargo.toml
il2cpp/resources/: bindgen.rs  wrapper.h
il2cpp/src/: bindings.rs  error.rs  exception.rs  functions.rs  impls.rs  lib.rs  types.rs  utils.rs  wrappers.rs
il2cpp/src/impls/: array.rs  class.rs  exception.rs  method.rs  mod.rs  object.rs  string.rs
il2cpp_sys/: Android.mk  Application.mk  Cargo.toml  build.rs  wrapper.h
il2cpp_sys/src/: lib.rs
inline_hook/: Cargo.toml  build.rs
inline_hook/resources/: And64InlineHook.cpp  bindgen.rs  wrapper.h
inline_hook/src/: lib.rs
src/: config.rs  error.rs  il2cpp.rs  inline_hook.rs  lib.rs  log.rs  logging.rs
