[package]
name = "bshook"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[workspace]
members = [
    "bshook_derive",
    "il2cpp",
    "il2cpp_sys",
]

[dependencies]
android_logger = "0.8"
bshook_derive = { path = "bshook_derive" }
il2cpp = { path = "il2cpp" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
