[workspace]
members = [
    "android_log",
    "derive",
    "examples/config",
    "examples/offsetless_hook",
    "il2cpp",
    "inline_hook",
]
exclude = [
    "examples",
    "resources",
]

[package]
name = "symphony"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
symphony_android_log = { path = "./android_log" }
symphony_derive = { path = "./derive" }
symphony_il2cpp = { path = "./il2cpp" }
symphony_inline_hook = { path = "./inline_hook" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

