[package]
name = "bshook"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
android_logger = "0.8"
bshook_derive = { path = "../derive" }
bshook_il2cpp = { path = "../il2cpp" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
